Bug 430580 - Default color scheme is not correctly applied
Summary: Default color scheme is not correctly applied
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 22.04.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
: 439052 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-12-19 12:30 UTC by Mikhail Zolotukhin
Modified: 2022-08-03 21:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Zolotukhin 2020-12-19 12:30:54 UTC
SUMMARY

When launching Kdenlive with the setting to follow system color scheme (i.e. called "default"), it used Breeze Dark instead of a system one.


STEPS TO REPRODUCE
1. Set Plasma color scheme to something not default (I use Nordic)
2. Open Kdenlive, set default in Settings -> Color Theme -> Default. The scheme applies.
3. Reopen Kdenlive

OBSERVED RESULT

Breeze Dark color scheme is used.

EXPECTED RESULT

The scheme you've selected in Plasma settings is used.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.20
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 1 Julius Künzel 2022-07-05 22:13:04 UTC
Thanks for the report!

I can confirm this behavior
Comment 2 Julius Künzel 2022-07-06 21:34:39 UTC
Git commit 27e89b7940b3fd9f9175907bbb9ea316f137a1e2 by Julius Künzel.
Committed on 06/07/2022 at 21:32.
Pushed by jlskuz into branch 'master'.

Refactor color scheme handeling to fix bugs

Fix the active scheme was not reflected in the menu

Fix [system] "Default" entry was always reset to breeze dark on next
start

M  +5    -0    src/main.cpp
M  +2    -2    src/mainwindow.cpp
M  +17   -36   src/utils/thememanager.cpp
M  +5    -5    src/utils/thememanager.h

https://invent.kde.org/multimedia/kdenlive/commit/27e89b7940b3fd9f9175907bbb9ea316f137a1e2
Comment 3 Julius Künzel 2022-08-03 21:14:47 UTC
*** Bug 439052 has been marked as a duplicate of this bug. ***