Refactor color scheme handeling to fix bugs

Fix the active scheme was not reflected in the menu

Fix [system] "Default" entry was always reset to breeze dark on next
start

BUG: 430580